[package]
name = "cusip"
version = "0.2.0"
description = "Support for creating and validating CUSIPs"
authors = ["Gregor Purdy <gregor@abcelo.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["cusip", "identifier", "finance", "equity", "stock"]
readme = "README.md"
repository = "https://github.com/gnp/cusip-rs.git"
include = []

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies]
bstr = { version = "0.2", features = ["std"] }

[[bench]]
name = "checksum_compare"
harness = false

[[bin]]
name = "cusip-tool"
test = false
bench = false
