[package]
name = "cusip"
version = "0.2.5"
description = "Support for creating and validating CUSIPs"
authors = ["Gregor Purdy <gregor@abcelo.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["cusip", "identifier", "finance", "equity", "stock"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/gnp/cusip-rs.git"
include = []

[dev-dependencies]
proptest = "1.2.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]

[[bench]]
name = "checksum_compare"
harness = false

[[bin]]
name = "cusip-tool"
test = false
bench = false
